# Subdirectory src

include_directories(${PROJECT_SOURCE_DIR})

## 01
#add_executable(01_AssignmentOperator 01_AssignmentOperator.cpp)

## 03
#add_executable(03_FindInPartiallySortedMatrix 03_FindInPartiallySortedMatrix.cpp)

## 04
#add_executable(04-replace_blank 04-replace_blank.cpp)

### 05
#add_executable(05-print_list_reverse 05-print_list_reverse.cpp list.cpp)

## 08
#add_executable(08-min_number_in_rotated_array 08-min_number_in_rotated_array.cpp)

## 11
#add_executable(11-power 11-power.cpp)

## 12
#add_executable(12-print_1_to_max_n_digits 12-print_1_to_max_n_digits.cpp)

## 14
#add_executable(14-reorder_array 14-reorder_array.cpp)

## 15
#add_executable(15-kth_node_from_end 15-kth_node_from_end.cpp list.cpp)

## 16
#add_executable(16-reverse_list 16-reverse_list.cpp list.cpp)

## 17
#add_executable(17-merge_sorted_lists 17-merge_sorted_lists.cpp list.cpp)

## 18
#add_executable(18-subtree 18-subtree.cpp binary_tree.cpp)

## 19
#add_executable(19-mirror_binarytree 19-mirror_binarytree.cpp binary_tree.cpp)

## 20
#add_executable(20-print_matrix 20-print_matrix.cpp)

## 21
#add_executable(21-min_in_stack 21-min_in_stack.cpp)

## 22
#add_executable(22-stack_push_pop_order 22-stack_push_pop_order.cpp)

## 23
add_executable(23-print_tree_from_top_to_bottom 23-print_tree_from_top_to_bottom.cpp binary_tree.cpp)

# 25
add_executable(25-find_path_sum 25-find_path_sum.cpp binary_tree.cpp)

# 28
add_executable(string_permutation string_permutation.cpp)
# 28
add_executable(28-string_permutation 28-string_permutation.cpp)

##################*******8 sort method**********########################
# insert_sort
add_executable(insert_sort insert_sort.cpp)
# buuble sort
add_executable(sort_methods sort_methods.cpp)
# str_cat
add_executable(str_cat str_cat.cpp)
